2006-05-27  Scott Smedley  <ss@aao.gov.au>

	* FvwmTabs/ConfigFvwmTabs:
	bugfix: FvwmTabs wasn't preserving state between restarts.

2006-05-09  Serge Koksharov  <gentoosiast dog yandex dot ru>

	* FvwmScript/Scripts/FvwmScript-ComExample.in:
	* FvwmTaskBar/Goodies.c:
	corrected typos

2006-04-26  Viktor Griph  <griph@dd.chalmers.se>

	* FvwmPager/FvwmPag
	* FvwmPager/FvwmPager.h (HandleScrollDone,list_string):
	* FvwmPager/x_pager.c (Scroll, do_scroll, HandleScrollDone): 
	Changed to pixel operation. Scrolling is summed up before sent to 
	fvwm to speed up multiple subsequent scrollings that take place faster
	than fvwm can change viewport.	

2006-04-07  Serge Koksharov  <gentoosiast dog yandex dot ru>

	* FvwmTaskBar/FvwmTaskBar.1.in:
	added another undocumented `Pad' option description.

	* FvwmTaskBar/FvwmTaskBar.c:
	fixed typos

	* FvwmTaskBar/FvwmTaskBar.c:
	* FvwmTaskBar/Goodies.c:
	* FvwmTaskBar/Start.c:
	Because of incorrect module->namelen calculation entire
	FvwmTaskBar module was broken. _Test_ your changes before
	commits.

2006-03-21  Serge Koksharov  <gentoosiast dog yandex dot ru>

	* FvwmAnimate/FvwmAnimate.c:
	corrected delay for Zoom3D animation effect

	* FvwmConsole/FvwmConsoleC.pl.1.in:
	* FvwmConsole/FvwmConsole.1.in:
	replaced all `Cntl' modificator key mentions with `Ctrl' to be
	consistent with rest of the documentation and because it's more
	conventional abbreviation.

	* FvwmForm/FvwmForm.1.in:
	* FvwmForm/FvwmForm-Rlogin:
	replaced all mentions of `rsh' with `ssh'. rsh is obsolete and
	inherently insecure. We shouldn't teach our users bad things,
	should we?

	* FvwmTaskBar/FvwmTaskBar.1.in:
	slightly clarified the `StartName' option description
	added the undocumented `MailDir' option description. Somebody
	violated section `K' of the convention list.

	* FvwmBacker/FvwmBacker.1.in:
	* FvwmDebug/FvwmGtkDebug.in:
	* FvwmDebug/FvwmGtkDebug.1:
	* FvwmEvent/FvwmEvent.1.in:
	* FvwmForm/FvwmForm.1.in:
	* FvwmIconMan/xmanager.c: