@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "FVWMTABS 1"
-.TH FVWMTABS 1 "2006-02-04" "FvwmTabs" "FVWM Modules"
+.TH FVWMTABS 1 "2006-05-31" "FvwmTabs" "FVWM Modules"
 .SH "NAME"
 \&\fBFvwmTabs\fR \- a generic tabbing module for the FVWM window manager.
 .SH "SYNOPSIS"
@@ -404,7 +404,9 @@ The tab-buttons can be reordered with a drag\-&\-drop operation initiated with \
 .PP
 \&\fIRelease All (Iconify)\fR will release all tabbed programs back to the window manager as iconised standalone windows.
 .PP
-\&\fIAdd\fR will add the next mouse-clicked window to a tab\-manager.
+\&\fIAdd\fR will add the next mouse-clicked window to the tab\-manager.
+.PP
+\&\fIAdd Next\fR will add the next window that is created to the tab\-manager.
 .PP
 \&\fIMulti Add\fR keeps adding mouse-clicked windows to a tab-manager until the escape key is pressed. Useful for adding multiple windows to a tab-manager at once.
 .PP
